20 February 2008
+ Changed to new url rewriting method.

Version 1.1.0
----------------------------------------------------------------
8 Feb 2008
+ Fixed call to getFile instead of getTag
+ Saving a page deletes its cache key.
+ Added threesec template
+ Updated: templates/page_templates/threesec/page.css
           "/page.tpl, "/structure.xml, "/threesec.png
                                             

6 February 2008
+ Pagesmith works with new File Cabinet

15 January 2008
+ Changed pagesmith to work with xmlparser changes
+ Added url parser to passinfo script to allow images to work in some
  editors (i.e. fck)
+ Updated files: javascript/passinfo/head.js

Version 1.0.7
----------------------------------------------------------------
11 December 2007
+ PageSmith can be set to automatically create a link when a new page
  is created.
+ Changing a page title now updates the menu link.
+ Updated : templates/settings.tpl

Version 1.0.6
----------------------------------------------------------------
5 December 2007
+ Added open_window in case a cached page has a clickable image.

Version 1.0.5
-----------------------------------------------------------------
29 November 2007
+ Changed wording on move to front functionality
+ Added move to front to miniadmin

25 October 2007
+ Fixed text_only template. Missing closing </div>
+ Updated: templates/page_templates/text_only/page.tpl

Version 1.0.4
-----------------------------------------------------------------
18 October 2007
+ Fixed pagesmith edit permission.
+ PageSmith home pages were missing edit link.

Version 1.0.3
-----------------------------------------------------------------
10 October 2007
+ Added SmartTag to page display.
+ Fixed section listing to allow a single section template
+ Added an edit link to page views beside miniadmin
+ PageSmith gives a warning if you exceed the character limit.
+ Option for PageSmith to ignore the character limit.
+ Added text_only page template.