@@ -1,3 +1,6 @@
+25 February 2008
++ Added search to pagesmith. Thanks Verdon.
+
 20 February 2008
 + Changed to new url rewriting method.
 
